<resources>
    <string name="app_name">MVP_Login_Sample</string>
    <string name="email_editText_hint">Email</string>
    <string name="password_editText_hint">Password</string>
    <string name="login_button_text">로그인</string>
    <string name="email_textView_text">Email :</string>
    <string name="password_textView_text">Password :</string>
    <string name="signup_button_text">회원 가입</string>
    <string name="signup_register_button_text">저장하기</string>
    <string name="signup_email_editText_hint">이메일</string>
    <string name="signup_password_editText_hint">비밀번호</string>
    <string name="signup_userName_editText_hint">사용자 이름</string>
    <string name="logout_button_text">로그아웃</string>
    <string name="name_textView_text">Name :</string>
</resources>